primitives/sr-api/test/tests/ui/missing_block_generic_parameter.stderr
error: Missing `Block` generic parameter.
  --> $DIR/missing_block_generic_parameter.rs:18:13
   |
18 |     impl self::Api for Runtime {
   |                ^^^
